--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
       <a href="#"><video src="amazon.mp4" controls></video></a>
      <!-- Placeholder images -->
        <a href="#"><video src="game.mp4" controls></video></a>
-      <a href="#"><video src=""></video></a>
+      <a href="#"><video src="potfolio.mp4"></video></a>
       </div>
     </div>
     <div class="project-title">
