--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     <header class="hide=header">
         <nav class="sticky-nav">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
@@ -27,7 +27,7 @@
     <div class="contener">
         <div class="nav-bar nav-barGo">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Education.html">Education</a></li>
                 <li><a href="project.html">Projects</a></li>
