--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             
 
          <div class="buttons">
-            <a href="Subhashree resume .jpg" download target="_blank">
+            <a href="Subhashree resume 1.png" download target="_blank">
         <button>Download CV</button></a>
         <a href="contact.html">
        <button>Contact me</button></a>
